# opengl-rcasio-projects

./: .gitignore  README.md
01-creating-a-window/: CMakeLists.txt
01-creating-a-window/src/: main.cpp
02-ex1/: README.md
02-ex1-hello-triangle/: CMakeLists.txt
02-ex1-hello-triangle/src/: fragment-shader.glsl  main.cpp  vertex-shader.glsl
02-ex1/include/glad/: glad.h
02-ex1/src/: main.cpp
02-ex2/: CMakeLists.txt  README.md
02-ex2/src/: fragment-shader.glsl  main.cpp  vertex-shader.glsl
02-ex3/: CMakeLists.txt  README.md
02-ex3/src/: fragm-s-01.glsl  fragm-s-02.glsl  main.cpp  vertex-shader.glsl
02-hello-triangle/: CMakeLists.txt
02-hello-triangle/src/: fragment-shader.glsl  main.cpp  vertex-shader.glsl
03-ex1/: CMakeLists.txt  README.md
03-ex1/src/: main.cpp
03-ex1/src/shaders/: frag-shader.glsl  vertex-shader.glsl
03-ex2/: CMakeLists.txt  README.md
03-ex2/include/: shader.h
03-ex2/src/: main.cpp
03-ex2/src/shaders/: frag-shader.glsl  vertex-shader.glsl
03-ex3/: CMakeLists.txt  README.md
03-ex3/src/: main.cpp
03-ex3/src/shaders/: frag-shader.glsl  vertex-shader.glsl
03-shaders/: CMakeLists.txt  README.md
03-shaders/src/: glad.c  main.cpp  shader.cpp  vertex-shader.glsl
03-shaders/src/shaders/: frag-shader.glsl  vertex-shader.glsl
